Update more pages for translations

--- a/locales/en.json
+++ b/locales/en.json
@@ -30,6 +30,8 @@
   },
   "auth": {
     "welcomeBack": "Welcome back",
+    "signIn": "Sign in",
+    "signUp": "Sign up",
     "signInSubtitle": "Sign in to your account",
     "createAccount": "Create an account",
     "signUpSubtitle": "Enter your email below to create your account",
@@ -38,29 +40,69 @@
     "confirmPassword": "Confirm Password",
     "firstName": "First name",
     "lastName": "Last name",
-    "forgotPassword": "Forgot Password?",
+    "forgotPassword": "Forgot password?",
     "dontHaveAccount": "Don't have an account?",
     "alreadyHaveAccount": "Already have an account?",
+    "or": "OR",
     "orContinueWith": "Or continue with",
-    "signInWithGoogle": "Sign in with Google",
-    "resetPassword": "Reset Password",
-    "resetPasswordSubtitle": "Enter your email to receive a password reset link",
-    "sendResetLink": "Send Reset Link",
+    "signInWithGoogle": "Continue with Google",
+    "resetPassword": "Reset password",
+    "resetPasswordSubtitle": "Enter your email address and we'll send you a link to reset your password",
+    "sendResetLink": "Send reset link",
+    "sendingResetLink": "Sending reset link...",
     "checkEmail": "Check your email",
     "rememberPassword": "Remember your password?",
     "backToSignIn": "Back to sign in",
     "updatePassword": "Update Password",
-    "newPassword": "New Password"
+    "newPassword": "New password",
+    "confirmPassword": "Confirm password",
+    "resetPasswordSubtitleAccount": "Please enter your new password below",
+    "resettingPassword": "Resetting password...",
+    "signingIn": "Signing in...",
+    "creatingAccount": "Creating account...",
+    "sendingResetLink": "Sending...",
+    "updating": "Updating...",
+    "emailPlaceholder": "you@example.com",
+    "passwordPlaceholder": "Enter password",
+    "confirmPasswordPlaceholder": "Confirm password",
+    "newPasswordPlaceholder": "Enter new password",
+    "errors": {
+      "invalidEmail": "Invalid email address",
+      "passwordTooShort": "Password must be at least 6 characters",
+      "passwordTooShortReset": "Password must be at least 8 characters",
+      "passwordTooLong": "Password must be less than 100 characters",
+      "passwordsDontMatch": "Passwords do not match",
+      "signInFailed": "Failed to sign in",
+      "signUpFailed": "Failed to create account",
+      "googleSignInFailed": "Failed to sign in with Google",
+      "resetLinkFailed": "Failed to send reset email",
+      "passwordUpdateFailed": "Failed to update password",
+      "error": "Error"
+    },
+    "success": {
+      "resetEmailSent": "Password reset email sent. Please check your inbox.",
+      "passwordResetSuccess": "Your password has been reset successfully",
+      "success": "Success"
+    }
   },
   "dashboard": {
     "title": "Dashboard",
+    "yourGames": "Your Games",
     "welcome": "Welcome, {name}!",
     "activeGames": "Active Games",
     "completedGames": "Completed Games",
     "createNewGame": "Create New Game",
+    "createAGame": "Create a game",
+    "joinAGame": "Join a game",
     "joinExistingGame": "Join Existing Game",
     "noActiveGames": "No active games",
     "noCompletedGames": "No completed games",
+    "noGamesYet": "No Games Yet!",
+    "noGamesDescription": "Start your first game of Word Assassin! Create a new game and invite your friends to join the fun.",
+    "players": "Players:",
+    "created": "Created:",
+    "today": "Today",
+    "yesterday": "Yesterday",
     "viewGame": "View Game",
     "gameStatus": {
       "waiting": "Waiting for players",
@@ -122,6 +164,24 @@
       "• Misdirect - talk about topics related to your word",
       "• Stay alert - anyone could be your assassin"
     ]
+  },
+  "libGameInstructions": {
+    "gettingStarted": "Getting Started",
+    "gettingStartedDescription": "One player creates a game and shares the invite code. Once everyone's in, the creator hits \"Start\" and each player gets a secret word and target player.",
+    "makingAKill": "Making a Kill",
+    "makingAKillDescription": "Get your target to say their secret word in conversation. They'll mark themselves as dead, and you'll get their target as your next mission.",
+    "stayingAlive": "Staying Alive",
+    "stayingAliveDescription": "Be careful with your words - someone is trying to make you say your secret word! When eliminated, you must mark yourself as killed.",
+    "wordRules": "Word Rules",
+    "wordRulesDescription": [
+      "• Homophones count (e.g., \"two\" = \"to\")",
+      "• Plurals count (e.g., \"shoe\" = \"shoes\")",
+      "• Accidents still count!"
+    ],
+    "fairPlay": "Fair Play",
+    "fairPlayDescription": "You can lie about your word and target, but never lie about eliminations. You can say your target's word, and get help from other players too.",
+    "winningLib": "Winning",
+    "winningLibDescription": "Keep assassinating targets until you're the last one standing. The final survivor wins the game!"
   },
   "forms": {
     "gameName": "Game Name",
