--- a/locales/es.json
+++ b/locales/es.json
@@ -30,6 +30,8 @@
   },
   "auth": {
     "welcomeBack": "Bienvenido de vuelta",
+    "signIn": "Iniciar sesión",
+    "signUp": "Registrarse",
     "signInSubtitle": "Inicia sesión en tu cuenta",
     "createAccount": "Crear una cuenta",
     "signUpSubtitle": "Ingresa tu correo electrónico para crear tu cuenta",
@@ -41,26 +43,66 @@
     "forgotPassword": "¿Olvidaste tu contraseña?",
     "dontHaveAccount": "¿No tienes una cuenta?",
     "alreadyHaveAccount": "¿Ya tienes una cuenta?",
+    "or": "O",
     "orContinueWith": "O continuar con",
-    "signInWithGoogle": "Iniciar sesión con Google",
+    "signInWithGoogle": "Continuar con Google",
     "resetPassword": "Restablecer contraseña",
-    "resetPasswordSubtitle": "Ingresa tu correo para recibir un enlace de restablecimiento",
+    "resetPasswordSubtitle": "Ingresa tu dirección de correo y te enviaremos un enlace para restablecer tu contraseña",
     "sendResetLink": "Enviar enlace",
+    "sendingResetLink": "Enviando enlace...",
     "checkEmail": "Revisa tu correo",
     "rememberPassword": "¿Recuerdas tu contraseña?",
     "backToSignIn": "Volver a iniciar sesión",
     "updatePassword": "Actualizar contraseña",
-    "newPassword": "Nueva contraseña"
+    "newPassword": "Nueva contraseña",
+    "confirmPassword": "Confirmar contraseña",
+    "resetPasswordSubtitleAccount": "Por favor ingresa tu nueva contraseña",
+    "resettingPassword": "Restableciendo contraseña...",
+    "signingIn": "Iniciando sesión...",
+    "creatingAccount": "Creando cuenta...",
+    "sendingResetLink": "Enviando...",
+    "updating": "Actualizando...",
+    "emailPlaceholder": "tu@ejemplo.com",
+    "passwordPlaceholder": "Ingresa contraseña",
+    "confirmPasswordPlaceholder": "Confirma contraseña",
+    "newPasswordPlaceholder": "Ingresa nueva contraseña",
+    "errors": {
+      "invalidEmail": "Dirección de correo inválida",
+      "passwordTooShort": "La contraseña debe tener al menos 6 caracteres",
+      "passwordTooShortReset": "La contraseña debe tener al menos 8 caracteres",
+      "passwordTooLong": "La contraseña debe tener menos de 100 caracteres",
+      "passwordsDontMatch": "Las contraseñas no coinciden",
+      "signInFailed": "Error al iniciar sesión",
+      "signUpFailed": "Error al crear la cuenta",
+      "googleSignInFailed": "Error al iniciar sesión con Google",
+      "resetLinkFailed": "Error al enviar correo de restablecimiento",
+      "passwordUpdateFailed": "Error al actualizar contraseña",
+      "error": "Error"
+    },
+    "success": {
+      "resetEmailSent": "Correo de restablecimiento enviado. Por favor revisa tu bandeja de entrada.",
+      "passwordResetSuccess": "Tu contraseña ha sido restablecida exitosamente",
+      "success": "Éxito"
+    }
   },
   "dashboard": {
     "title": "Panel",
+    "yourGames": "Tus Juegos",
     "welcome": "¡Bienvenido, {name}!",
     "activeGames": "Juegos Activos",
     "completedGames": "Juegos Completados",
     "createNewGame": "Crear Nuevo Juego",
+    "createAGame": "Crear un juego",
+    "joinAGame": "Unirse a un juego",
     "joinExistingGame": "Unirse a Juego Existente",
     "noActiveGames": "Sin juegos activos",
     "noCompletedGames": "Sin juegos completados",
+    "noGamesYet": "¡Aún No Hay Juegos!",
+    "noGamesDescription": "¡Comienza tu primer juego de Asesino de Palabras! Crea un nuevo juego e invita a tus amigos a unirse a la diversión.",
+    "players": "Jugadores:",
+    "created": "Creado:",
+    "today": "Hoy",
+    "yesterday": "Ayer",
     "viewGame": "Ver Juego",
     "gameStatus": {
       "waiting": "Esperando jugadores",
@@ -122,6 +164,24 @@
       "• Despista - habla sobre temas relacionados con tu palabra",
       "• Mantente alerta - cualquiera podría ser tu asesino"
     ]
+  },
+  "libGameInstructions": {
+    "gettingStarted": "Comenzando",
+    "gettingStartedDescription": "Un jugador crea un juego y comparte el código de invitación. Una vez que todos estén adentro, el creador presiona \"Iniciar\" y cada jugador recibe una palabra secreta y jugador objetivo.",
+    "makingAKill": "Hacer una Eliminación",
+    "makingAKillDescription": "Haz que tu objetivo diga su palabra secreta en la conversación. Se marcarán como muertos, y obtendrás su objetivo como tu próxima misión.",
+    "stayingAlive": "Mantente Vivo",
+    "stayingAliveDescription": "¡Ten cuidado con tus palabras - alguien está tratando de hacerte decir tu palabra secreta! Cuando seas eliminado, debes marcarte como muerto.",
+    "wordRules": "Reglas de Palabras",
+    "wordRulesDescription": [
+      "• Los homófonos cuentan (ej., \"haber\" = \"a ver\")",
+      "• Los plurales cuentan (ej., \"zapato\" = \"zapatos\")",
+      "• ¡Los accidentes también cuentan!"
+    ],
+    "fairPlay": "Juego Limpio",
+    "fairPlayDescription": "Puedes mentir sobre tu palabra y objetivo, pero nunca mientas sobre las eliminaciones. Puedes decir la palabra de tu objetivo, y también recibir ayuda de otros jugadores.",
+    "winningLib": "Victoria",
+    "winningLibDescription": "¡Sigue asesinando objetivos hasta ser el último en pie. El superviviente final gana el juego!"
   },
   "forms": {
     "gameName": "Nombre del Juego",
