Add translations for blog

--- a/locales/en.json
+++ b/locales/en.json
@@ -313,6 +313,7 @@
     "viewArticle": "View Article",
     "seeAllPosts": "See all posts",
     "by": "By",
+    "and": "and",
     "readyToPlay": "Ready to play Word Assassins?",
     "readyToPlayDescription": "The ultimate social deduction game that combines stealth, strategy, and vocabulary. Eliminate your targets, stay alive, and become the last assassin standing.",
     "startPlaying": "Start Playing"
