--- a/locales/es.json
+++ b/locales/es.json
@@ -313,6 +313,7 @@
     "viewArticle": "Ver Artículo",
     "seeAllPosts": "Ver todas las publicaciones",
     "by": "Por",
+    "and": "y",
     "readyToPlay": "¿Listo para jugar Asesinos de Palabras?",
     "readyToPlayDescription": "El juego definitivo de deducción social que combina sigilo, estrategia y vocabulario. Elimina a tus objetivos, mantente vivo y conviértete en el último asesino en pie.",
     "startPlaying": "Empezar a Jugar"
